Bug 268021 - Not shown any info regarding VPN connection establishment
Summary: Not shown any info regarding VPN connection establishment
Status: RESOLVED FIXED
Alias: None
Product: knetworkmanager
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.9
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-09 00:31 UTC by aderocha
Modified: 2011-11-27 17:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description aderocha 2011-03-09 00:31:44 UTC
Version:           0.9 (using KDE 4.5.5) 
OS:                Linux

For VPN connections is not shown any info regarding connection establishment (if it was successfully established or an error occurred).
It should at least appear an icon indicating if connection was successful or not. User is forced to re-open KNetwork Manager window to verify if VPN connection was established (is a bit annoying).

Reproducible: Always

Steps to Reproduce:
Just establish a VPN connection

Actual Results:  
No info available about connection establishment status
Comment 1 Lamarque V. Souza 2011-04-29 07:42:49 UTC
Git commit 9ce0024cc4607e5d695b559f6d0913c526caec4c by Lamarque V. Souza.
Committed on 29/04/2011 at 07:51.
Pushed by lvsouza into branch 'nm09'.

Add notifications for VPN connections.

BUG: 268021
(cherry picked from commit 5ecb6b00ece98a0d81cee7dccf8b9a0eb94df6c9)

M  +24   -1    libs/service/notificationmanager.cpp     

http://commits.kde.org/networkmanagement/9ce0024cc4607e5d695b559f6d0913c526caec4c
Comment 2 Lamarque V. Souza 2011-04-29 07:42:49 UTC
Git commit 5ecb6b00ece98a0d81cee7dccf8b9a0eb94df6c9 by Lamarque V. Souza.
Committed on 29/04/2011 at 07:51.
Pushed by lvsouza into branch 'master'.

Add notifications for VPN connections.

BUG: 268021

M  +24   -1    libs/service/notificationmanager.cpp     

http://commits.kde.org/networkmanagement/5ecb6b00ece98a0d81cee7dccf8b9a0eb94df6c9
Comment 3 Lamarque V. Souza 2011-11-05 19:17:43 UTC
Git commit df879caafed13e446b64763068c4215924b149b4 by Lamarque V. Souza.
Committed on 05/11/2011 at 20:06.
Pushed by lvsouza into branch 'master'.

Disabling connected notification by default since now VPN connections
can use system tray icon to indicate the connection activation succeeded.

CCBUG: 268021

M  +1    -1    networkmanagement.notifyrc
M  +1    -1    plasma_nm_version.h

http://commits.kde.org/networkmanagement/df879caafed13e446b64763068c4215924b149b4
Comment 4 Lamarque V. Souza 2011-11-27 17:08:20 UTC
Git commit d08b9aebcdc445dcd2272466fb54c3a70d4a098f by Lamarque V. Souza.
Committed on 05/11/2011 at 20:06.
Pushed by lvsouza into branch 'nm09'.

Disabling connected notification by default since now VPN connections
can use system tray icon to indicate the connection activation succeeded.

CCBUG: 268021

M  +1    -1    networkmanagement.notifyrc

http://commits.kde.org/networkmanagement/d08b9aebcdc445dcd2272466fb54c3a70d4a098f