Add notifications for VPN connections.

BUG: 268021
(cherry picked from commit 5ecb6b00ece98a0d81cee7dccf8b9a0eb94df6c9)